added media queries
mobile media styling

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 
   <body>
     <header class="jumbotron">
-      <h1 class="display-3">Organize and plan your day</h1>
+      <h1 class="display-3" id='organize'>Organize and plan your day</h1>
       <p id="currentDay" class="lead">Current Time and Date:          </p>
     </header>
     <div class="container">
